--- a/src/components/Links/Links.css
+++ b/src/components/Links/Links.css
@@ -8,11 +8,15 @@ body {
   margin-top: 50px;
   text-align: center;
   color: #fff;
+  padding: 10px;
+}
+.header-container > h1 {
+  font-size: 45px;
 }
 .header-container > img {
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
 }
 
 .links-section-container {
@@ -20,7 +24,11 @@ body {
   color: white;
   margin-top: 25px;
 }
-
+.links-section-text-container {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 50px;
+}
 .buttons-item {
   display: inline-block;
   color: #fff;
