--- a/src/components/Links/Links.css
+++ b/src/components/Links/Links.css
@@ -24,6 +24,10 @@ body {
   color: white;
   margin-top: 25px;
 }
+.links-section-header-container {
+  margin-left: 20px;
+  margin-right: 20px;
+}
 .links-section-text-container {
   margin-left: 20px;
   margin-right: 20px;
