--- a/src/components/Jobs/Jobs.css
+++ b/src/components/Jobs/Jobs.css
@@ -43,9 +43,48 @@
 .jobs-text-container {
   color: #fff;
   text-align: left;
-  margin-left: 10rem;
-  margin-right: 10rem;
-  margin-top: 5rem;
+  margin-left: 80rem;
+  margin-right: 80rem;
+  margin-top: 2rem;
+}
+/* Smallest device*/
+@media (min-width: 100px) and (max-width: 575px) {
+  .jobs-text-container {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+  .jobs-text-container {
+    margin-left: 6rem;
+    margin-right: 6rem;
+  }
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+  .jobs-text-container {
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+  .jobs-text-container {
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+  .jobs-text-container {
+    margin-left: 12rem;
+    margin-right: 12rem;
+  }
 }
 
 .jobs-text-freelancer-container {
